--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.application'
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 21
@@ -23,14 +23,14 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:25.4.0"
-    compile "com.android.support:support-v13:25.4.0"
+    compile "com.android.support:support-v13:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:palette-v7:25.4.0"
-    compile "com.android.support:recyclerview-v7:$androidSupportVersion"
+    compile "com.android.support:recyclerview-v7:25.4.0"
     compile "com.android.support:cardview-v7:25.4.0"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
     compile 'com.android.support:support-annotations:27.1.1'
-    compile 'com.android.support:design:25.4.0'
+    compile "com.android.support:design:$androidSupportVersion"
+    compile "com.android.support:support-v4:$androidSupportVersion"
 }
